Add asset issuance event responses
* Add endpoint for retrieving asset issuance events per tick.
* Add endpoint for retrieving all asset related events per tick.
* Change unit of measurement data type (store and return as base64).
* Add query method for retrieving asset issuance events.
* Rename current endpoints to plural.
* Add and refactor tests.
