# proto/qubic-transfers-rpc.swagger.json
@@ -16,7 +16,7 @@
     "application/json"
   ],
   "paths": {
-    "/api/v1/entities/{identity}/events/asset-transfer": {
+    "/api/v1/entities/{identity}/events/asset-transfers": {
       "get": {
         "operationId": "TransferService_GetAssetChangeEventsForEntity",
         "responses": {
@@ -46,7 +46,7 @@
         ]
       }
     },
-    "/api/v1/entities/{identity}/events/qu-transfer": {
+    "/api/v1/entities/{identity}/events/qu-transfers": {
       "get": {
         "operationId": "TransferService_GetQuTransferEventsForEntity",
         "responses": {
@@ -76,7 +76,38 @@
         ]
       }
     },
-    "/api/v1/ticks/{tick}/events/asset-transfer": {
+    "/api/v1/ticks/{tick}/events/asset-issuances": {
+      "get": {
+        "operationId": "TransferService_GetAssetIssuanceEventsForTick",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protoAssetIssuanceEventResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "tick",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "tags": [
+          "TransferService"
+        ]
+      }
+    },
+    "/api/v1/ticks/{tick}/events/asset-transfers": {
       "get": {
         "operationId": "TransferService_GetAssetChangeEventsForTick",
         "responses": {
@@ -107,7 +138,38 @@
         ]
       }
     },
-    "/api/v1/ticks/{tick}/events/qu-transfer": {
+    "/api/v1/ticks/{tick}/events/assets": {
+      "get": {
+        "operationId": "TransferService_GetAssetEventsForTick",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protoAssetEventsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "tick",
+            "in": "path",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "tags": [
+          "TransferService"
+        ]
+      }
+    },
+    "/api/v1/ticks/{tick}/events/qu-transfers": {
       "get": {
         "operationId": "TransferService_GetQuTransferEventsForTick",
         "responses": {
@@ -206,6 +268,78 @@
           "items": {
             "type": "object",
             "$ref": "#/definitions/protoAssetChangeEvent"
+          }
+        }
+      }
+    },
+    "protoAssetEventsResponse": {
+      "type": "object",
+      "properties": {
+        "latestTick": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "changeEvents": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/protoAssetChangeEvent"
+          }
+        },
+        "issuanceEvents": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/protoAssetIssuanceEvent"
+          }
+        }
+      }
+    },
+    "protoAssetIssuanceEvent": {
+      "type": "object",
+      "properties": {
+        "issuerId": {
+          "type": "string"
+        },
+        "name": {
+          "type": "string"
+        },
+        "numberOfShares": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "unitOfMeasurement": {
+          "type": "string"
+        },
+        "numberOfDecimalPlaces": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "transactionHash": {
+          "type": "string"
+        },
+        "tick": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "eventType": {
+          "type": "integer",
+          "format": "int64"
+        }
+      }
+    },
+    "protoAssetIssuanceEventResponse": {
+      "type": "object",
+      "properties": {
+        "latestTick": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "events": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/protoAssetIssuanceEvent"
           }
         }
       }
